update maven.md